--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Library/Developer/CommandLineTools/usr/bin/python3"
+    "python.pythonPath": "C:\\Users\\柠檬草\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
