--- a/FRAME/testFile/config.ini
+++ b/FRAME/testFile/config.ini
@@ -10,6 +10,6 @@ timeout = 10.0
 [EMAIL]
 on_off = on;
 subject = 接口自动化测试报告
-app = mail
+app = Outlook
 addressee = yuhang.gyh@alibaba-inc.com
 cc = yuhang.gyh@alibaba-inc.com
