--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/usr/local/Cellar/python/3.7.5/Frameworks/Python.framework/Versions/3.7/bin/python3"
+    "python.pythonPath": "C:\\Users\\柠檬草\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
