--- a/My_API_Frame/common/config.ini
+++ b/My_API_Frame/common/config.ini
@@ -2,6 +2,7 @@
 [HTTP]
 scheme = http
 baseurl = 127.0.0.1
+baidu = http://www.baidu.com
 port = 8888
 timeout = 10.0
  
@@ -13,3 +14,7 @@ subject = 接口自动化测试报告
 app = Outlook
 addressee = sonicxp3000@163.com
 cc = sonicxp3000@163.com
+
+
+[DATABASE]
+learning = 10.10
