--- a/e-UI-test/page_element/login_xhb.yaml
+++ b/e-UI-test/page_element/login_xhb.yaml
@@ -1,4 +1,12 @@
-账号登录: "id==login-username"
-password: "id==login-passwd"
-login_button: "css==a.btn.btn-login"
-# reg_button: "xpath==//*[@id="geetest-wrap"]/div/div[5]/a[1]"
+账号登录: "css==#app > div > div > div > div.footer-main > div > div:nth-child(3) > p"
+username: "css==#app > div > div > div > div:nth-child(1) > div > input:nth-child(2)"
+password: "css==#app > div > div > div > div:nth-child(1) > div > input:nth-child(3)"
+login_button: "css==#app > div > div > div > div:nth-child(1) > div > button"
+user_icon: "css==#nav > div._1nJ7ryw1BkPUB-yg_R7h3h > div._3xgiAvLJejCh-_LxDwiSIw > h1 > span > img"
+user_settings: "css==div:nth-child(1) div:nth-child(2) div.src-index__main--Dp3QE div.src-index__sub-menu--HD2dF > a:nth-child(6)"
+user_quit: "css==#right-side-content > div > div.src-index__account-settings--iKjuI > div:nth-child(3) > section > div:nth-child(4) > div.src-Components-Item-item__left--25LXp > div"
+enter_quit: "css==body > div:nth-child(10) > div > div.ant-modal-wrap > div > div.ant-modal-content > div > div > div.ant-modal-confirm-btns > button.ant-btn.ant-btn-primary > span"
+toast_text: "css==div > div > div > span:nth-child(2)"
+发布消息: "css==#right-side-content > div > div.src-components-SubMenu-index__sub-nav--3t3s2 > button > span"
+验证码: "xpath==//div[@class='captcha-img']"
+验证码输入: "css==div.login-wrap.d-flex div.login-main.electron div.login-panel.login-panel-password div:nth-child(1) div.phone-login div.code-box:nth-child(4) > input.ant-input.code-input"
